# vila_da_serra

./: .env_Example  .gitignore  README.md  app.py  main.py  pyproject.toml
pages/: 00_Home.py  0_Login.py  1_Metricas.py  2_Ocorrencias.py  3_Fluxo_de_Caixa.py  4_Agenda.py  5_Moradores.py
src/: auth.py  supabase_client.py  ui.py
